fixed navbar, it is now always visible on all pages except the landing page

--- a/site/css/custom.css
+++ b/site/css/custom.css
@@ -336,7 +336,18 @@ header .header-content .header-content-inner p {
         box-shadow: 0px 7px 20px 0px rgba(0,0,0,0.1);
     }
 
+    nav.navbar-default.show {
+        border-color: #fff;
+        background-color: #fff;
+        box-shadow: 0px 7px 20px 0px rgba(0,0,0,0.1);
+    }
+
     .navbar-default.affix .navbar-header .navbar-brand {
+        letter-spacing: 0.1em;
+        color: #FF5930;
+    }
+
+    nav.navbar-default.show .navbar-header .navbar-brand {
         letter-spacing: 0.1em;
         color: #FF5930;
     }
@@ -348,6 +359,11 @@ header .header-content .header-content-inner p {
 
     .navbar-default.affix .nav > li>a,
     .navbar-default.affix .nav>li>a:focus {
+        color: #222;
+    }
+
+    nav.navbar-default.show .nav > li>a,
+    nav.navbar-default.show .nav>li>a:focus {
         color: #222;
     }
 
